# VisualLocalizer

./: CMakeLists.txt  ReadMe.md
VisualLocalizer/: CMakeLists.txt  Config.yaml  DescriptorQuery.cpp  DescriptorQuery.h  FileInterface.h  GlobalConfig.cpp  GlobalConfig.h  Header.h  PicGnssFile.cpp  PicGnssFile.h  PlaceRecognitionMain.cpp  VisualLocalization.cpp  VisualLocalization.h  VisualLocalizer.cpp  VisualLocalizer.h  database.cpp  database.h
VisualLocalizer/graph/: NetworkFlow.cpp  NetworkFlow.h
VisualLocalizer/tools/: Timer.h  list_dir.cpp  list_dir.h  timer.cpp
